<resources>
    <string name="app_name">Dagobert</string>

    <!-- General names -->
    <string name="accounts">Accounts</string>

    <!-- Process Transaction -->
    <string name="charged_transactions">Charged: </string>
    <string name="transaction_no_or_multiple_model">No or multiple Model: </string>
    <string name="transaction_no_model">No model</string>
    <string name="transaction_multiple_model">Multiple model</string>
    <string name="transaction_charged_manually">Manually</string>
    <string name="transactions_total">Total: </string>
    <string name="transactions_already_charged">Already charged: </string>
    <string name="number_files">Files: </string>
    <string name="number_error">Error: </string>
    <string name="restart">Restart</string>

    <!-- Manuel Charging -->
    <string name="account">Konto</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="type">Typ</string>
    <string name="detail_one">Erste Beschreibung</string>
    <string name="detail_two">Zweite Beschreibung</string>
    <string name="amount">Betrag</string>
    <string name="date">Datum</string>
    <string name="svp_subaccount_id">Unterkonto-Id</string>
    <string name="charge">Buchen</string>
    <string name="recharge">Recharge</string>
    <string name="charge_model">Buchen  &amp; Vorlage</string>
    <string name="no_detail">Nicht vorhanden</string>
    <string name="value_added_tax">Value added tax</string>
    <string name="model_exists">Model exists already</string>
    <string name="transaction_operated">Transaction successfully operated</string>
    <string name="model_added">A new model was also added</string>

    <!-- Balance-Sheet -->
    <string name="profit_before_tax">Profit before tax</string>
    <string name="profit_after_tax">Profit after tax</string>

    <!-- Navigation -->
    <string name="business_assets">Business Assets</string>
    <string name="liabilities">Liabilities</string>
    <string name="claims">Claims</string>
    <string name="update">Update</string>
    <string name="charge_manually">Charge manually</string>

</resources>
